k8s/app.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${APP_ID}-svc
spec:
  ports:
  - port: 80
    targetPort: ${API_PORT}
    protocol: TCP
    name: http
  selector:
    app: ${APP_ID}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ${APP_ID}-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ${APP_ID}
  template:
    metadata:
      labels:
        app: ${APP_ID}
    spec:
      containers:
      - name: ${APP_ID}
        image: ${DOCKER_USERNAME}/${APP_ID}:${VERSION}
        ports:
        - containerPort: ${API_PORT}
