k8s/ingress-local-secure.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP_ID}-route
  namespace: ${KUBE_NAMESPACE}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${APP_HOST}`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: ${APP_ID}-svc
          port: 443
          serversTransport: mytransport
