k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${APP_ID}-route
  namespace: ${KUBE_NAMESPACE}
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 50m
spec:
  tls:
  - hosts:
    - ${APP_HOST}
    secretName: ${APP_ID}-cert-${ACME}
  rules:
  - host: ${APP_HOST}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ${APP_ID}-svc
            port:
              number: 80
---
# workaround https://github.com/compumike/hairpin-proxy
# for bug https://github.com/jetstack/cert-manager/issues/466 in http01 solver
# dns01 could be used but scaleway DNS tokens aren't scoped enough for secured Kube usage
apiVersion: v1
kind: Namespace
metadata:
  name: hairpin-proxy

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hairpin-proxy-haproxy
  name: hairpin-proxy-haproxy
  namespace: hairpin-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hairpin-proxy-haproxy
  template:
    metadata:
      labels:
        app: hairpin-proxy-haproxy
    spec:
      containers:
        - image: compumike/hairpin-proxy-haproxy:0.2.1
          name: main
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "200Mi"
              cpu: "50m"
---

apiVersion: v1
kind: Service
metadata:
  name: hairpin-proxy
  namespace: hairpin-proxy
spec:
  selector:
    app: hairpin-proxy-haproxy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443

---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hairpin-proxy-controller
  name: hairpin-proxy-controller
  namespace: hairpin-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hairpin-proxy-controller
  template:
    metadata:
      labels:
        app: hairpin-proxy-controller
    spec:
      serviceAccountName: hairpin-proxy-controller-sa
      securityContext:
        runAsUser: 405
        runAsGroup: 65533
      containers:
        - image: compumike/hairpin-proxy-controller:0.2.1
          name: main
          resources:
            requests:
              memory: "50Mi"
              cpu: "10m"
            limits:
              memory: "100Mi"
              cpu: "50m"
