k8s/ingressroute-openshift.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${APP_ID}-route
  namespace: ${KUBE_NAMESPACE}
spec:
  host: ${APP_HOST}
  to:
    kind: Service
    name: ${APP_ID}-svc
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
  wildcardPolicy: None
status:
  ingress:
    - host: ${APP_HOST}
      routerName: default
      conditions:
        - type: Admitted
          status: 'True'
      wildcardPolicy: None
      routerCanonicalHostname: apps.opj-prd.tdp.ovh
