k8s/traefik-ingress-tls.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP_ID}-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`admin.judilibre.io`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: ${APP_ID}-svc
          port: 80
  tls:
    secretName: ${APP_ID}-cert
