k8s/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-judilibre-admin
  namespace: judilibre-ovh-sopra-dev
spec:
  podSelector: 
    matchLabels:
      app: judilibre-es
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          app: judilibre-admin
    ports: 
    - protocol: TCP
      port: 9200
    - protocol: TCP
      port: 9300
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-judilibre-search
  namespace: judilibre-ovh-sopra-dev
spec:
  podSelector: 
    matchLabels:
      app: judilibre-es
  ingress:
  - from:
    - podSelector: 
        matchLabels:
          app: judilibre-search
    ports: 
    - protocol: TCP
      port: 9200
    - protocol: TCP
      port: 9300
